2008-11-30 Josh Kropf <josh@slashdev.ca>

    * AlxTask.java: new class, the <alx> ant task
    * ApplicationType.java: new class, subtype of <alx> ant task
    * BaseTask.java (execute): print version number to build log
    * CodSetType.java: new class, subtype of ApplicationType
    * RapcTask.java (execute): call superclass execute method
    * SigtoolTask.java (execute): call superclass execute method
    * etc/bb-ant-defs.xml: added alx/application/codset definitions


2008-11-26 Josh Kropf <josh@slashdev.ca>

    * EntryPointType.java, JdpType.java: applied patch by jwall1701 to support
      using resource bundles for entry point titles


2008-11-01 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java
      (Define.if, Define.unless): added attributes to conditionally define
      preprocessor tags added as nested elements of rapc task
      (execute): enable preprocessor when defines attribute or nested define
      elements are set


2008-11-01 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java: applied patch by Derek Konigsberg for preprocessor support
      (RapcTask.Define): new nested element class
      (execute): when defines attribute or nested <define> elements are set,
      enable preprocessor


2008-07-30 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java
      (verbose,nodebug,nowarn,warnerror,noconvert): new compiler flags


2008-07-29 Josh Kropf <josh@slashdev.ca>

    * RapcTask.java (setJdeHome): remove code for locating JDE specific jar
      files to avoid causing conflicts when using project level jde.home
      property and setting jdehome property in rapc task
      (execute): add api jar to import path
      (executeRapc): get rapc jar path as local variable


2008/07/23 (josh)

- Applied patch contributed by atleta to add property for explicitly setting
  the search path for the preverify tool.

2008/03/31 (josh)
- Applied patch contributed by badgrs to rename the description property
  in JdpType from 'desc' to 'description'.
