@@ -1,10 +1,13 @@
 <?xml version="1.0"?>
 <antlib>
-   <taskdef name="rapc" classname="ca.slashdev.bb.RapcTask" />
-   <taskdef name="sigtool" classname="ca.slashdev.bb.SigtoolTask" />
-   <typedef name="jdp" classname="ca.slashdev.bb.JdpType" />
-   <typedef name="entry" classname="ca.slashdev.bb.EntryPointType" />
-   <taskdef name="alx" classname="ca.slashdev.bb.AlxTask" />
-   <typedef name="application" classname="ca.slashdev.bb.ApplicationType" />
-   <typedef name="codset" classname="ca.slashdev.bb.CodSetType" />
+   <taskdef name="rapc" classname="ca.slashdev.bb.tasks.RapcTask" />
+   <taskdef name="sigtool" classname="ca.slashdev.bb.tasks.SigtoolTask" />
+   <typedef name="jdp" classname="ca.slashdev.bb.types.JdpType" />
+   <typedef name="entry" classname="ca.slashdev.bb.types.EntryPointType" />
+   
+   <taskdef name="alx" classname="ca.slashdev.bb.tasks.AlxTask" />
+   <typedef name="application" classname="ca.slashdev.bb.types.ApplicationType" />
+   <typedef name="codset" classname="ca.slashdev.bb.types.CodSetType" />
+   
+   <taskdef name="jadtool" classname="ca.slashdev.bb.tasks.JadtoolTask" />
 </antlib>
